name:                mastodon-to-twitter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/konn/mastodon-to-twitter#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mastodon-to-twitter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , conduit
                     , lens
                     , http-types
                     , http-conduit
                     , Hastodon
                     , twitter-conduit
                     , tagsoup
                     , stache
                     , text
                     , bytestring
                     , wuss
                     , websockets
                     , yaml
                     , aeson
                     , http-client
                     , wreq
                     , lens-aeson
                     , conduit-combinators
                     , conduit
  ghc-options:         -Wall -O2 -threaded
